# SOFC

./: =2.9.0.post0  ANALYSIS_SUMMARY_REPORT.txt  COMPLETE_DATASET_OVERVIEW.txt  COMPLETION_SUMMARY.txt  DATASET_COMPLETE.txt  DATASET_DELIVERY_SUMMARY.md  DATASET_DOCUMENTATION.md  DATASET_GENERATION_SUMMARY.md  DATASET_GENERATION_SUMMARY.txt  DATASET_INDEX.txt  DATASET_MANIFEST.txt  DATASET_PACKAGE_SUMMARY.md  DATASET_SUMMARY.md  DATASET_SUMMARY.txt  DATA_DICTIONARY_CATEGORY4.md  DATA_DOCUMENTATION_CATEGORY3.md  DELIVERABLES_SUMMARY.md  DELIVERY_REPORT.txt  EQUATIONS_AND_MODELS.md  FILE_INDEX.md  FILE_INVENTORY.md  GENERATION_COMPLETE_REPORT.txt  Gershom George  INDEX.md  INDEX.txt  MATERIAL_PROPERTIES_DOCUMENTATION.md  MATERIAL_PROPERTIES_QUICK_REFERENCE.md  MATERIAL_PROPERTIES_README.md  Material_Properties_Dataset_Documentation.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  PhD_Thesis_Open_Innovation_Tanzanian_SMEs.tex  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_START_GUIDE.txt  README.md  README_ATOMIC_DATA.md  README_CATEGORY3.md  (+418 more)
data/: README.md  (+18 more)
fintech_risk_nexus/: pyproject.toml  requirements.txt
fintech_risk_nexus/data/: README_nexus_dataset.txt  nexus_monthly.csv  nexus_yearly.csv
sofc_microstructure/: README.md  demo_dataset_usage.py  generate_complete_dataset.py  pyproject.toml  requirements.txt
sofc_microstructure/data/: metadata.json  sofc_microstructure.h5  sofc_microstructure.tiff
sofc_microstructure/sofc_microstructure/: generator.py
sofc_microstructure/src/: interface_analyzer.py  mesh_generator.py  (+1 more)
(+3174 files in other folders)
