[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-risk-nexus"
version = "0.1.0"
description = "Synthetic Nexus-Specific & Alternative Data generator for FinTech risk in SSA"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pytrends>=4.9.2",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
]

[project.scripts]
fintech-risk-nexus = "fintech_risk_nexus.cli:main"
